# ctcp

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
server/: CMakeLists.txt
server/example/: index.html  page.html
server/example/internal/: not_found.html
server/example/style/: style.css
server/include/: ctp_arg_parser.h  ctp_base_includes.h  ctp_http.h  ctp_http_errornos.h  ctp_program_args.h  ctp_server.h
server/include/helpers/: ctp_helpers.h  ctp_http_helpers.h
server/include/http/: ctp_http.h  ctp_http_errornos.h  ctp_http_handle_response.h  ctp_http_mimes.h  ctp_http_parse_request.h  ctp_http_request_utils.h
server/scripts/: build.sh  clean-build.sh
server/src/: ctp_arg_parser.c  ctp_server.c  handle_http_request.c  main.c
server/src/helpers/: ctp_helpers.c  ctp_http_helpers.c
server/src/http/: ctp_http_handle_response.c  ctp_http_mimes.c  ctp_http_parse_request.c  ctp_http_request_utils.c  handle_http_request.c
src/: main.c
